# Rheidos

./: .coverage  .coveragerc  .gitignore  COMPUTE_TEST_PLAN.md  DYNAMIC_VORTEX_CHANGES.md  README.md  VORTEX_QUICK_REFERENCE.md  imgui.ini  pyproject.toml  report.md
apps/: __init__.py
apps/point_vortex/: app.py
apps/poisson_dec/: app.py  bindings.py  interaction.py  system.py
docs/: actions.md  api.md  binding-explanation.md  binding-howto.md  binding-reference.md  binding-tutorial.md  compute-dag.md  concepts.md  direct-copy.md  explanation.md  faq.md  getting-started.md  houdini.md  how-to.md  imgui-panels.md  index.md  input.md  notebooks.md  philosophy.md  point-selector.md  point-vortex-sim.md  point_vortex_p2.md  poisson-mesh-sim.md  producer_helpers.md  profiler_ui_rewrite_plan.md  profiling_report.md  recipes.md  reference.md  rendering.md  reset_sim_audit.md  scene_config.md  scene_config_live.md  simulation-design.md  simulation-protocol.md  taichi.md  tensorboard_logging.md  tutorials.md  user-guide.md  vscode-debugger.md
kung_fu_panda/: __init__.py  engine.py  session.py  store.py
kung_fu_panda/abc/: __init__.py  observer.py
kung_fu_panda/controllers/: fpv_camera.py  screenshot.py  toggle_view.py
kung_fu_panda/examples/: Interactive.ipynb  demo_script.py  mesh_preview.py  pulse_cube.py  run_interactive.py  studio_preview.py
kung_fu_panda/resources/: texture.py
kung_fu_panda/views/: __init__.py  axes.py  mesh_labels.py  orientation_gizmo.py  studio.py
models/: TrefoilKnot.stl
notebooks/: Kelvin Inversion.ipynb  Point Vortex.ipynb  interactive_demo.ipynb
pure_taichi/: README.md  default_config.toml  imgui.ini  pyproject.toml
pure_taichi/src/pure_taichi/: __init__.py  advection.py  assembly.py  cli.py  config.py  demo.py  elements.py  math_utils.py  mesh.py  model.py  scenarios.py  sim.py  solver.py  space.py  taichi_compat.py  velocity.py
pure_taichi/tests/: test_elements.py  test_headless_cli.py  test_integration.py  test_matrices.py  test_solver.py  test_space.py  test_velocity_advection.py
rheidos/: __init__.py  engine.py  input_router.py  logger.py  rendering.py  scene_config.py  scene_config_live.py  store.py
rheidos/abc/: __init__.py  action.py  controller.py  view.py
rheidos/apps/: demo_script.py  gui_demo.py  gui_mesh_toggle.py  mesh_preview.py  point_selection.py
rheidos/compute/: __init__.py  graph.py  registry.py  resource.py  resource_kinds.py  typing.py  wiring.py  world.py
rheidos/controllers/: __init__.py  exit.py  fpv_camera.py  pause.py  point_selector.py
rheidos/examples/: Interactive.ipynb  gui_mesh_toggle.py  pendulum_demo.py  point_selection.py  point_vortex_stream.py  pulse_cube.py  run_interactive.py  scene_factories.py  studio_preview.py
rheidos/houdini/: __init__.py  debug.py  sop.py
rheidos/resources/: __init__.py  loaders.py  mesh.py  primitives.py  texture.py
rheidos/sim/: base.py  interaction.py
rheidos/ui/: gui_manager.py  imgui_manager.py  surface.py
scripts/: tb_smoke.py
tests/: test_logger.py  test_profiler_trace.py  test_profiler_ui.py  test_summary_server.py  test_summary_store.py
(+636 files in other folders)
