[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rheidos"
version = "0.1.0"
description = "Compute and Houdini runtime for the active P2 application"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Rudresh Veerkhare" }]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
    "taichi>=1.7",
    "trimesh>=4.0",
    "pyyaml>=6.0",
    "tensorboardX>=2.6",
]

[project.optional-dependencies]
compute = ["taichi>=1.7"]
mesh = ["trimesh>=4.0"]
config = ["pyyaml>=6.0", "trimesh>=4.0"]
all = [
    "taichi>=1.7",
    "trimesh>=4.0",
    "numpy>=1.23",
    "pyyaml>=6.0",
    "tensorboardX>=2.6",
]

[tool.setuptools.packages.find]
include = ["rheidos", "rheidos.*"]
