[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pure-taichi-p2"
version = "0.1.0"
description = "Standalone P2 point-vortex simulation and Taichi GGUI demo"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
  "taichi>=1.7",
]

[project.optional-dependencies]
mesh = ["trimesh>=4.0"]
test = ["pytest>=7.0"]

[project.scripts]
pure-taichi-p2 = "pure_taichi.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pure_taichi", "pure_taichi.*"]
